--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,29 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textInternet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="No Internet"
+            android:background="@color/red"
+            />
+        <Button
+            android:id="@+id/buttonRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:background="@color/white"
+            android:text="Refresh"
+            android:textSize="10sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInternet" />
+
         <ImageView
             android:id="@+id/imageViewNote"
             android:layout_width="wrap_content"
@@ -28,7 +51,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -70,9 +94,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         />
-
-
-
     <Button
         android:id="@+id/buttonPrevious"
         android:layout_width="60dp"
@@ -105,8 +126,6 @@
         app:layout_constraintBottom_toBottomOf="@id/btnLiveMusic"
         android:background="@drawable/skip_next"
         />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
